src/objects/Exception__c.object
<CustomObject>
    <description>This object is leveraged to store all the exceptions that are generated in the code and needs to be notified to the support group</description>
    <fields>
        <fullName>Abandoned_After__c</fullName>
        <formula>( End_Time__c - Request_Time__c ) * 24 * 60 * 60
+ ( VALUE(MID(TEXT(End_Time__c),18,2)) - VALUE(MID(TEXT(Request_Time__c),18,2)) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Abandoned After</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chat_Button__c</fullName>
        <label>Chat Button</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Type__c</fullName>
        <label>Exception Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Skill__c</fullName>
        <label>Primary Skill</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <description>Process which generated the exception</description>
        <label>Process</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Time__c</fullName>
        <label>Request Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to be Reprocessed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transcript_Name__c</fullName>
        <label>Transcript Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Exception</label>
    <listViews>
        <fullName>Abandoned_Chats</fullName>
        <columns>Transcript_Name__c</columns>
        <columns>NAME</columns>
        <columns>Request_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Abandoned_After__c</columns>
        <columns>Primary_Skill__c</columns>
        <columns>Chat_Button__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Abandoned_After__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </filters>
        <label>Abandoned Chats</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Transcript_Name__c</columns>
        <columns>Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Request_Time__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Error_Code__c</columns>
        <columns>Process__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>KB_Sync_Errors</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Exception__c.KB_Sync_Failure</value>
        </filters>
        <label>KB Sync Errors</label>
    </listViews>
    <nameField>
        <label>Exception Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exceptions</pluralLabel>
    <recordTypes>
        <fullName>Abandoned_Chat</fullName>
        <active>true</active>
        <description>This exception type is used to document live chats that have a status of &apos;Missed&apos;.</description>
        <label>Abandoned Chat</label>
    </recordTypes>
    <recordTypes>
        <fullName>CSAT_Phone_Upload</fullName>
        <active>true</active>
        <label>CSAT Phone Upload</label>
    </recordTypes>
    <recordTypes>
        <fullName>Email_Relay_Failure</fullName>
        <active>true</active>
        <label>Email Relay Failure</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_Exception</fullName>
        <active>true</active>
        <description>Default Exception Type</description>
        <label>General Exception</label>
    </recordTypes>
    <recordTypes>
        <fullName>KB_Sync_Failure</fullName>
        <active>true</active>
        <description>Retrieve Article Ids from Exception object in Salesforce that has been marked as “Ready for Re-Processing” on a daily batch.</description>
        <label>KB Sync Failure</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>